kustomize/overlays/production/customer/sendmail/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sendmail
  labels:
    app: sendmail
    stage: production
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sendmail
      stage: production
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sendmail
        stage: production
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: eks.amazonaws.com/capacityType
                    operator: In
                    values:
                      - ON_DEMAND
              weight: 10
      volumes:
        - name: mail-config-volume
          configMap:
            name: sendmail-mail-config
            items:
              - key: main.cf
                path: main.cf
        - name: mail-secret-volume
          secret:
            secretName: sendmail-secret
            items:
              - key: sasl_passwd
                path: sasl_passwd
      containers:
        - name: sendmail-nginx
        - name: sendmail-app
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/sendmail:production
          volumeMounts:
            - mountPath: /etc/postfix/main.cf
              name: mail-config-volume
              subPath: main.cf
              readOnly: true
            - mountPath: /etc/postfix/sasl_passwd
              name: mail-secret-volume
              readOnly: true
              subPath: sasl_passwd
