kustomize/overlays/production/customer/sendmail/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendmail-svc
spec:
  selector:
    app: sendmail
    stage: production
